--- a/css/main.css
+++ b/css/main.css
@@ -128,3 +128,21 @@
 #cubic-bazier {
     transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1)
 }
+
+.box-shadow {
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px 18px red;
+}
+
+.inset {
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: inset 5px 10px 18px #888888;
+}
+
+.text-shadow {
+    border: 1px solid;
+    padding: 10px;
+    text-shadow: 2px 2px #FF0000;
+}
